Fix search button and input width on mobile and small desktop screens

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -210,3 +210,11 @@ header {
     margin: 0.3em;
     color: #48a3e7;
 }
+
+@media (max-width: 480px) {
+    h1,h2 {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
+
