--- a/src/components/SearchBar/index.scss
+++ b/src/components/SearchBar/index.scss
@@ -22,6 +22,8 @@ $search-bar-height: 72px;
         font-weight: 300;
         background: #ffffff;
 
+        margin-bottom: 10px;
+
         height: $search-bar-height;
 
         input {
